done tweaking loot tables

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -1110,12 +1110,12 @@ world-784868108 {
 
 world-78688046 {
     # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
+    B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=sword
+    S:filterText=blastem
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
