--- a/config/DLDungeonsJBG/chests.cfg
+++ b/config/DLDungeonsJBG/chests.cfg
@@ -259,6 +259,7 @@ loot, 1, minecraft:gold_ingot,        	2,  4
 loot, 1, minecraft:slime_ball,          1,  3
 loot, 1, minecraft:redstone,          1,  8
 loot, 1, minecraft:dye:4,          1,  8
+loot, 1, variedcommodities:ingot_bronze, 1, 8
 
 loot, 2, minecraft:book,        	2,  5
 loot, 2, minecraft:gold_ingot,        	2,  4
@@ -270,6 +271,7 @@ loot, 2, minecraft:dye:4,          1,  8
 loot, 2, mysticalworld:copper_ingot, 3,  8
 loot, 2, mysticalworld:amethyst, 3,  8
 loot, 2, mysticalworld:silver_ingot, 3,  8
+loot, 1, variedcommodities:ingot_bronze, 3, 8
 
 loot, 3, minecraft:golden_apple,       	1,  1
 loot, 3, minecraft:blaze_rod,        	1,  2
@@ -365,6 +367,7 @@ loot, 7, iceandfire:dragonbone, 2, 4
 loot, 8, xat:dwarf_ring, 1, 1
 loot, 8, xat:fairy_ring, 1, 1
 loot, 8, xat:dragons_eye, 1, 1
+loot, 8, teslacorelib:machine_case, 1, 1
 loot, 8, baubles:ring, 1, 1
 loot, 8, minecraft:shulker_box, 1, 1
 loot: 8, minecraft:shulker_shell, 1, 2
