--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -1111,13 +1111,11 @@ world-784868108 {
 world-78688046 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=false
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=night v
+    S:filterText=axe
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
