add rotm configs

--- a/config/rotm.cfg
+++ b/config/rotm.cfg
@@ -24,11 +24,18 @@ general {
         #    minecraft:player;minecraft:blaze;mob;fireball
         # >
         S:"Cancel Damage Sources" <
-            twilightforest:;naga;arrow
+            minecraft:wither_skeleton;;arrow;indirectMagic
+            lycanitesmobs:chupacabra;;arrow
+            lycanitesmobs:geonach;;arrow
+            lycanitesmobs:vapula;;arrow
+            lycanitesmobs:clink;;arrow
+            iceandfire:dread_scuttler;;arrow
+            iceandfire:dread_knight;;arrow
+            twilightforest:naga;;arrow
             twilightforest:minoshroom;;arrow;indirectMagic
             twilightforest:hydra;;arrow;indirectMagic
             twilightforest:knight_phantom;;arrow
-            twilightforest:;yeti_alpha;arrow
+            twilightforest:yeti_alpha;;arrow
          >
 
         # Cancels a potion effect being able to be applied to a specified entity.
