--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -17,7 +17,7 @@ general {
     B:"Enforce requirements on Fake Players"=true
 
     # Set this to false to not require holding down the shift key to view requirements!
-    B:"Hide Requirements"=true
+    B:"Hide Requirements"=false
 
     # Set requirements for items in this list. Each entry is composed of the item key and the requirements
     # The item key is in the simple mod:item_id format. Optionally, it can be in mod:item_id:metadata, if you want to match metadata.
@@ -1033,19 +1033,19 @@ general {
         toughasnails:jelled_slime_chestplate:*=reskillable:defense|1
         toughasnails:jelled_slime_leggings:*=reskillable:defense|1
         toughasnails:jelled_slime_boots:*=reskillable:defense|1
-        mocreatures:hidehelmet:*=reskillable:defense|3
-        mocreatures:hidechest:*=reskillable:defense|3
-        mocreatures:hidelegs:*=reskillable:defense|3
-        mocreatures:hideboots:*=reskillable:defense|3
-        mocreatures:furhelmet:*=reskillable:defense|3
-        mocreatures:furchest:*=reskillable:defense|3
-        mocreatures:furlegs:*=reskillable:defense|3
-        mocreatures:furboots:*=reskillable:defense|3
-        mocreatures:reptilehelmet:*=reskillable:defense|5
-        mocreatures:reptileplate:*=reskillable:defense|5
-        mocreatures:reptilelegs:*=reskillable:defense|5
-        mocreatures:reptileboots:*=reskillable:defense|5
-        mocreatures:staffteleport:*=reskillable:defense|10,reskillable:magic|5
+        mocreatures:hidehelmet:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:hidechest:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:hidelegs:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:hideboots:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:furhelmet:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:furchest:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:furlegs:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:furboots:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:reptilehelmet:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:reptileplate:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:reptilelegs:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:reptileboots:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:staffteleport:*=reskillable:defense|10,reskillable:magic|10
         mocreatures:staffportal:*=reskillable:defense|10
         mocreatures:sharksword:*=reskillable:attack|4
         mocreatures:silversword:*=reskillable:attack|9,reskillable:magic|3
@@ -1057,22 +1057,22 @@ general {
         mocreatures:scorpstingfrost:*=reskillable:agility|4
         mocreatures:scorpstingcave:*=reskillable:agility|4
         mocreatures:scorpstingnether:*=reskillable:agility|4
-        mocreatures:scorpplatedirt:*=reskillable:defense|6
-        mocreatures:scorphelmetdirt:*=reskillable:defense|6
-        mocreatures:scorplegsdirt:*=reskillable:defense|6
-        mocreatures:scorpbootsdirt:*=reskillable:defense|6
-        mocreatures:scorpplatefrost:*=reskillable:defense|6
-        mocreatures:scorphelmetfrost:*=reskillable:defense|6
-        mocreatures:scorplegsfrost:*=reskillable:defense|6
-        mocreatures:scorpbootsfrost:*=reskillable:defense|6
-        mocreatures:scorpplatenether:*=reskillable:defense|6
-        mocreatures:scorphelmetnether:*=reskillable:defense|6
-        mocreatures:scorplegsnether:*=reskillable:defense|6
-        mocreatures:scorpbootsnether:*=reskillable:defense|6
-        mocreatures:scorpplatecave:*=reskillable:defense|6
-        mocreatures:scorphelmetcave:*=reskillable:defense|6
-        mocreatures:scorplegscave:*=reskillable:defense|6
-        mocreatures:scorpbootscave:*=reskillable:defense|6
+        mocreatures:scorpplatedirt:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorphelmetdirt:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorplegsdirt:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpbootsdirt:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpplatefrost:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorphelmetfrost:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorplegsfrost:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpbootsfrost:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpplatenether:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorphelmetnether:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorplegsnether:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpbootsnether:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpplatecave:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorphelmetcave:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorplegscave:*=reskillable:defense|6,reskillable:agility|4
+        mocreatures:scorpbootscave:*=reskillable:defense|6,reskillable:agility|4
         mocreatures:tusksiron:*=reskillable:attack|8
         mocreatures:tusksdiamond:*=reskillable:attack|16
         mocreatures:horsearmorcrystal:*=reskillable:defense|12
