--- a/config/treechopper/treechopper.cfg
+++ b/config/treechopper/treechopper.cfg
@@ -148,6 +148,54 @@ data {
         item.diamond_axe
 		item.mysticalworld.amethyst_axe
 		item.iceandfire.silver_axe
+        item.notreepunching.saw/gold
+        item.notreepunching.saw/copper
+        item.notreepunching.saw/bronze
+        item.notreepunching.saw/iron
+        item.notreepunching.saw/steel
+        item.notreepunching.saw/diamond
+        item.notreepunching.mattock/copper
+        item.notreepunching.mattock/bronze
+        item.notreepunching.mattock/gold
+        item.notreepunching.mattock/iron
+        item.notreepunching.mattock/steel
+        item.notreepunching.mattock/diamond
+        item.immersiveengineering.axe_steel
+        item.iceandfire.dragonbone_axe
+        item.iceandfire.dragonsteel_fire_axe
+        item.iceandfire.dragonsteel_ice_axe
+        item.iceandfire.myrmex_desert_axe
+        item.iceandfire.myrmex_jungle_axe
+        item.iceandfire.troll_weapon.axe
+        item.spartanweaponry.battleaxe_iron
+        item.spartanweaponry.battleaxe_bronze
+        item.spartanweaponry.battleaxe_stone
+        item.spartanweaponry.battleaxe_silver
+        item.spartanweaponry.battleaxe_gold
+        item.spartanweaponry.battleaxe_diamond
+        item.spartanfire.battleaxe_dragonbone
+        item.spartanfire.battleaxe_fire_dragonbone
+        item.spartanfire.battleaxe_ice_dragonbone
+        item.spartanfire.battleaxe_fire_dragonsteel
+        item.spartanfire.battleaxe_ice_dragonsteel
+        item.defiledlands.umbrium_axe
+        item.defiledlands.ravaging_axe
+        item.spartanfire.battleaxe_jungle
+        item.spartanfire.battleaxe_desert
+        item.spartanfire.battleaxe_jungle_venom
+        item.spartanfire.battleaxe_desert_venom
+        item.aquaculture.neptunium_axe
+        item.mowziesmobs.wrought_axe
+        item.mysticalworld.copper_axe
+        item.mysticalworld.silver_axe
+        item.mysticalworld.amethyst_axe
+        item.roots.living_axe
+        item.naturesaura.infused_iron_axe
+        item.
+        item.
+        item.
+
+
      >
 
     # Put here allowed special blocks - e.g. fruit,  [default: [tile.pamdate], [tile.pampistachio], [tile.pampapaya], [tile.pamwalnut], [tile.pamcherry], [tile.pamfig], [tile.pamdragonfruit], [tile.pamapple], [tile.pamlemon], [tile.pampear], [tile.pamolive], [tile.pamgrapefruit], [tile.pampomegranate], [tile.pamcashew], [tile.pamvanilla], [tile.pamstarfruit], [tile.pambanana], [tile.pamplum], [tile.pamavocadu], [tile.pampecan], [tile.pampistachio], [tile.pamlime], [tile.pampeppercorn], [tile.pamalmond], [tile.pamgooseberry], [tile.pampeach], [tile.pamchestnut], [tile.pamcoconut], [tile.pammango], [tile.pamapricot], [tile.pamorange], [tile.pampersimmon], [tile.pamnutmeg], [tile.pamdurian], [tile.pamcinnamon], [tile.pammaple], [tile.pampaperbark]]
