tweaks and stuff

--- a/config/dimensionalcontrol/presets/test1/biomeproviders/RL.cfg
+++ b/config/dimensionalcontrol/presets/test1/biomeproviders/RL.cfg
@@ -5,6 +5,8 @@ addSpawnBiome("minecraft:forest")
 addSpawnBiome("minecraft:birch_forest")
 addSpawnBiome("minecraft:mutated_forest")
 addSpawnBiome("minecraft:mutated_birch_forest")
+addSpawnBiome("minecraft:ocean")
+addSpawnBiome("minecraft:deep_ocean")
 addSpawnBiome("biomesoplenty:alps_foothills")
 addSpawnBiome("biomesoplenty:bamboo_forest")
 addSpawnBiome("biomesoplenty:bayou")
@@ -225,7 +227,6 @@ genLayer2.addBiome(303, "defiledlands:forest_vilespine", 5)
 genLayer2.addBiome(304, "minecraft:savanna", 10)
 genLayer2.addBiome(304, "biomesoplenty:eucalyptus_forest", 10)
 genLayer2.addBiome(304, "biomesoplenty:sacred_springs", 5)
-genLayer2.addBiome(304, "biomesoplenty:pasture", 10)
 genLayer2.addBiome(304, "biomesoplenty:crag", 10)
 genLayer2.addBiome(304, "biomesoplenty:seasonal_forest", 10)
 genLayer2.addBiome(304, "biomesoplenty:grassland", 10)
@@ -262,7 +263,6 @@ genLayer2.addBiome(306, "biomesoplenty:moor", 10)
 genLayer2.addBiome(306, "biomesoplenty:bamboo_forest", 10)
 genLayer2.addBiome(306, "biomesoplenty:mangrove", 10)
 genLayer2.addBiome(306, "biomesoplenty:dead_swamp", 10)
-genLayer2.addBiome(306, "biomesoplenty:land_of_lakes", 10)
 
 #7 is dry cool, 
 
@@ -291,6 +291,7 @@ genLayer2.addBiome(308, "minecraft:swampland", 10)
 genLayer2.addBiome(308, "biomesoplenty:cherry_blossom_grove", 10)
 genLayer2.addBiome(308, "biomesoplenty:grove", 10)
 genLayer2.addBiome(308, "biomesoplenty:mystic_grove", 5)
+genLayer2.addBiome(308, "biomesoplenty:pasture", 10)
 
 #9 is wet cool,
 
@@ -348,7 +349,6 @@ genLayer2 = magnify(1000, genLayer2, 2)
 genLayer2 = new GenLayerBiomeEdgeDC(1000, genLayer2)
 
 genLayer2.addBiomeEdge(["biomesoplenty:shrubland"], ["biomesoplenty:mountain_foothills"], null, "biomesoplenty:sacred_springs")
-genLayer2.addBiomeEdge(["biomesoplenty:land_of_lakes"], ["minecraft:ocean","minecraft:deep_ocean"], null, "biomesoplenty:redwood_forest")
 genLayer2.addBiomeEdge(["minecraft:extreme_hills"], null, ["minecraft:extreme_hills"], "minecraft:smaller_extreme_hills")
 genLayer2.addBiomeEdge(["minecraft:taiga_hills"], null, ["minecraft:taiga_hills"], "minecraft:taiga")
 genLayer2.addBiomeEdge(["biomesoplenty:oasis"], null, ["biomesoplenty:oasis"], "biomesoplenty:lush_desert")
@@ -396,7 +396,6 @@ genLayer2.setHill("biomesoplenty:flower_field", ["biomesoplenty:mountain_foothil
 genLayer2.setHill("biomesoplenty:prairie", ["minecraft:mutated_forest","minecraft:forest_hills","minecraft:birch_forest_hills"])
 genLayer2.setHill("biomesoplenty:dead_forest", ["biomesoplenty:crag","biomesoplenty:steppe"])
 genLayer2.setHill("biomesoplenty:grassland", ["minecraft:mutated_forest","minecraft:forest_hills","minecraft:birch_forest_hills","minecraft:forest","biomesoplenty:woodland"])
-genLayer2.setHill("biomesoplenty:pasture", ["biomesoplenty:mountain_foothills","minecraft:forest_hills","minecraft:birch_forest_hills","minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove"])
 genLayer2.setHill("biomesoplenty:meadow", ["biomesoplenty:mountain_foothills","minecraft:forest_hills","minecraft:birch_forest_hills","minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove","biomesoplenty:pasture","biomesoplenty:seasonal_forest"])
 genLayer2.setHill("biomesoplenty:pasture", ["biomesoplenty:mountain_foothills","minecraft:forest_hills","minecraft:birch_forest_hills","biomesoplenty:seasonal_forest", "minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove","biomesoplenty:land_of_lakes"])
 genLayer2.setHill("biomesoplenty:highland", ["biomesoplenty:mountain_foothills","minecraft:forest_hills", "minecraft:birch_forest_hills","biomesoplenty:seasonal_forest", "biomesoplenty:shield"])
@@ -507,7 +506,6 @@ genLayer2.addBiomeEdge("minecraft:plains", ["minecraft:ocean", "minecraft:deep_o
 genLayer2.addBiomeEdge("minecraft:mutated_plains", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "biomesoplenty:gravel_beach")
 genLayer2.addBiomeEdge("biomesoplenty:woodland", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "biomesoplenty:gravel_beach")
 genLayer2.addBiomeEdge("biomesoplenty:flower_field", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "biomesoplenty:gravel_beach")
-genLayer2.addBiomeEdge("biomesoplenty:pasture", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "minecraft:stone_beach")
 
 genLayer2.addBiomeEdge("biomesoplenty:redwood_forest", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "biomesoplenty:redwood_forest_edge")
 genLayer2.addBiomeEdge("minecraft:roofed_forest", ["minecraft:ocean", "minecraft:deep_ocean", "minecraft:frozen_ocean"], null, "biomesoplenty:gravel_beach")
