--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -539,6 +539,15 @@ world-197031429 {
 }
 
 
+world-1974054333 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=handle
+    B:overlayEnabled=true
+}
+
+
 world-2037450460 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
@@ -1111,11 +1120,11 @@ world-784868108 {
 world-78688046 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=false
-    B:cheatItemsEnabled=true
+    B:cheatItemsEnabled=false
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=axe
+    S:filterText=@foodexpansion
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
