--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -91,8 +91,17 @@ general {
         ##########################################################################################################
 
         minecraft {
+            # Removes some blacksmith chest loot to match TAN
+            B:"Blacksmith Chest Tweak"=true
+
+            # In Minecraft 1.2.5, players who get knocked back have their camera tilted in the direction of the attack.
+            B:"Damage Tilt Effect"=true
+
             # Debug mode, sends messages to all players and otherwise spams, do not enable unless you are privately testing!
             B:"Debug Mode"=false
+
+            # Requires lessCollisions patch, change that config value instead, don't change this unless you are benchmarking
+            B:"Less Collisions"=true
 
             # Aggressively checks for invalid living entity movement and attempts to fix it
             B:"Motion Checker"=true
@@ -187,10 +196,47 @@ general {
         ##########################################################################################################
 
         reskillable {
+            # Enables JSON transmutation additions
+            B:"Custom Transmutation"=false
+
             # Master switch for this mod compatibility
             B:ENABLED=false
         }
 
+        ##########################################################################################################
+        # battle towers
+        #--------------------------------------------------------------------------------------------------------#
+        # Battle Towers tweaks
+        ##########################################################################################################
+
+        "battle towers" {
+            # Make tower explosions belong to nobody, avoids Infernal Mobs issues
+            B:"Change Tower Explosion Owner"=true
+
+            # Master switch for this mod compatibility
+            B:ENABLED=true
+
+            # Make golems stop building up speed when dormant
+            B:"Golem Dormant Speed Fix"=true
+        }
+
+    }
+
+    ##########################################################################################################
+    # patches
+    #--------------------------------------------------------------------------------------------------------#
+    # Patch options for the coremod
+    ##########################################################################################################
+
+    patches {
+        # Master switch for the coremod
+        B:ENABLED=true
+
+        # Makes some entities stop checking for large entity collisions
+        B:lessCollisions=true
+
+        # Makes the particle queue threaded. Fixes concurrency issue with logical server creating physical client particles.
+        B:particleThreading=true
     }
 
 }
