--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,10 +1,10 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Feb 15 15:24:10 EST 2021
-enableMiddleClick=true
+#Tue Feb 16 21:54:20 EST 2021
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
-enableAutoRefill=false
+enableAutoRefill=true
 autoRefillBeforeBreak=false
 autoRefillDamageThreshhold=5
 enableSounds=true
