--- a/config/immersiveengineering.cfg
+++ b/config/immersiveengineering.cfg
@@ -12,7 +12,7 @@ general {
     B:blocksBreakWires=true
 
     # Support for colourblind people, gives a text-based output on capacitor sides
-    B:colourblindSupport=false
+    B:colourblindSupport=true
 
     # Set to false to have Coresamples not show the coordinates of the chunk.
     B:coreSampleCoords=true
@@ -260,32 +260,32 @@ general {
         # The maximum amount of Flux that can be input into a low-voltage capacitor (by IE net or other means)
         # Min: 1
         # Max: 2147483647
-        I:capacitorLV_input=256
+        I:capacitorLV_input=128
 
         # The maximum amount of Flux that can be output from a low-voltage capacitor (by IE net or other means)
         # Min: 1
         # Max: 2147483647
-        I:capacitorLV_output=256
+        I:capacitorLV_output=128
 
         # The maximum amount of Flux that can be stored in a low-voltage capacitor
         # Min: 1
         # Max: 2147483647
-        I:capacitorLV_storage=100000
+        I:capacitorLV_storage=50000
 
         # The maximum amount of Flux that can be input into a medium-voltage capacitor (by IE net or other means)
         # Min: 1
         # Max: 2147483647
-        I:capacitorMV_input=1024
+        I:capacitorMV_input=256
 
         # The maximum amount of Flux that can be output from a medium-voltage capacitor (by IE net or other means)
         # Min: 1
         # Max: 2147483647
-        I:capacitorMV_output=1024
+        I:capacitorMV_output=256
 
         # The maximum amount of Flux that can be stored in a medium-voltage capacitor
         # Min: 1
         # Max: 2147483647
-        I:capacitorMV_storage=1000000
+        I:capacitorMV_storage=100000
 
         # The Flux per tick the Charging Station can insert into an item
         # Min: 1
@@ -315,7 +315,7 @@ general {
         # The Flux per tick that the Diesel Generator will output. The burn time of the fuel determines the total output
         # Min: 0
         # Max: 2147483647
-        I:dieselGen_output=4096
+        I:dieselGen_output=256
 
         # The base Flux that is output by the dynamo. This will be modified by the rotation modifier of the attached water- or windmill
         # Min: 0.0
@@ -330,7 +330,7 @@ general {
         # The Flux per tick the Excavator will consume to dig
         # Min: 1
         # Max: 2147483647
-        I:excavator_consumption=4096
+        I:excavator_consumption=1024
 
         # The maximum amount of yield one can get out of a chunk with the excavator. Set a number smaller than zero to make it infinite
         I:excavator_depletion=38400
@@ -493,7 +493,7 @@ general {
         # Output modifier for the energy created by the Thermoelectric Generator
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:thermoelectric_output=1.0
+        D:thermoelectric_output=1.5
 
         # The Flux per tick the chemthrower turret consumes to shoot
         # Min: 1
@@ -568,7 +568,7 @@ general {
         # Generation config for Silver Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_silver <
-            0
+            4
             8
             40
             4
@@ -578,10 +578,10 @@ general {
         # Generation config for Uranium Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_uranium <
-            0
+            4
             8
             24
-            2
+            1
             60
          >
 
@@ -618,47 +618,47 @@ general {
         # The amount of base damage an ArmorPiercing Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_AP=10.0
+        D:bulletDamage_AP=20.0
 
         # The amount of base damage a single part of Buckshot inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Buck=2.0
+        D:bulletDamage_Buck=4.0
 
         # The amount of base damage a Casull Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Casull=10.0
+        D:bulletDamage_Casull=20.0
 
         # The amount of base damage a DragonsBreath Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Dragon=3.0
+        D:bulletDamage_Dragon=6.0
 
         # The amount of base damage a Homing Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Homing=10.0
+        D:bulletDamage_Homing=20.0
 
         # The amount of base damage a Phial Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Potion=1.0
+        D:bulletDamage_Potion=2.0
 
         # The amount of damage a silver bullet inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Silver=10.0
+        D:bulletDamage_Silver=20.0
 
         # The amount of base damage a Wolfpack Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Wolfpack=6.0
+        D:bulletDamage_Wolfpack=12.0
 
         # The amount of damage the sub-projectiles of the Wolfpack Cartridge inflict
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_WolfpackPart=4.0
+        D:bulletDamage_WolfpackPart=8.0
 
         # The mb of fluid the Chemical Thrower will consume per tick of usage
         # Min: 1
