--- a/config/bettercombatmod.cfg
+++ b/config/bettercombatmod.cfg
@@ -50,9 +50,10 @@ general {
     S:"Offhand Efficiency"=0.8
 
     # How likely it is to land a critical hit in percent [range: 0.0 ~ 1.0, default: 0.3]
-    S:"Random Crit Chance"=0.0
+    S:"Random Crit Chance"=0.3
+
     # Melee attacks have now 30% chance to critically strike, critical strikes can no longer be forced by falling [default: true]
-    B:"Random Crits"=false
+    B:"Random Crits"=true
 
     # Melee attacks that don't hit the target won't cause cooldown [default: true]
     B:"Refound energy on miss"=false
