--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -3,7 +3,7 @@
 animated {
     B:cave_spider=true
     B:husk=true
-    B:player=false
+    B:player=true
     B:skeleton=true
     B:spider=true
     B:stray=true
