tweak lycanites dungeon

--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -1227,6 +1227,9 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"quark:wraith"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"testdummy:dummy"=1
     I:"tfspellpack:carminite_ghastling_minion"=1
     I:"tfspellpack:cave_troll_minion"=1
     I:"tfspellpack:druid_mage"=1
@@ -1239,92 +1242,34 @@ general {
     I:"tfspellpack:stable_ice_core_minion"=1
     I:"tfspellpack:twilight_wraith_minion"=1
     I:"tfspellpack:unstable_ice_core_minion"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:arcanebore"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:brainyzombie"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:cultistcleric"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:cultistknight"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:cultistleader"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:cultistportalgreater"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:cultistportallesser"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:eldritchcrab"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:eldritchgolem"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:eldritchguardian"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:eldritchwarden"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:firebat"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:giantbrainyzombie"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:golem"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:inhabitedzombie"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:mindspider"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:pech"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:spellbat"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintacle"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintaclegiant"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintacletiny"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintcrawler"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintseed"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintseedprime"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:taintswarm"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:thaumslime"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:turretadvanced"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:turretbasic"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"thaumcraft:wisp"=1
 
     #  [range: 0 ~ 50, default: 1]
