--- a/config/treasure2/treasure2-c1.0.cfg
+++ b/config/treasure2/treasure2-c1.0.cfg
@@ -1127,6 +1127,7 @@ general {
         S:"01. Foreign mod IDs for custom loot tables:" <
             mocreatures
             sgs_metals
+            immersiveengineering
          >
 
         # A list of mods that have prebuilt loot tables available.
@@ -1135,6 +1136,7 @@ general {
         S:"02. Pre-build loot tables for foreign mod IDs:" <
             mocreatures
             sgs_metals
+            immersiveengineering
          >
     }
 
